--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,15 +23,15 @@ jobs:
 
 #      - name: Generate deployment package
 #        run: zip -r deploy.zip . -x '*.git*'
-#
-#      - name: Deploy to EB
-#        uses: einaregilsson/beanstalk-deploy@v20
-#        with:
-#          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
-#          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-#          application_name: docker-react
-#          environment_name: Dockerreact-env
-#          existing_bucket_name: elasticbeanstalk-us-east-2-520597075946
-#          region: us-east-2
-#          version_label: ${{ github.sha }}
+
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+          application_name: multi-docker
+          environment_name: Multidocker-env
+          existing_bucket_name: elasticbeanstalk-us-east-2-520597075946
+          region: us-east-2
+          version_label: ${{ github.sha }}
 #          deployment_package: deploy.zip
